--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,8 @@
     <script src="productMatrix.js" data-group="resources"></script>
     <script src="AddToCartPreview.js" data-group="resources"></script>
     <script src="tabsView.js" data-group="resources"</script>
+    <!--Do NOT add a file override unless you do NOT see it in the list above - BB-->
+    <!--Carousel is not built into this theme-->
 
     <script src="//maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
     <script src="//cdn.ckeditor.com/4.4.7/basic/ckeditor.js" data-group="cdn"></script>
