--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,8 @@
 <head>
 	<!--baseTagToken-->
 	<!--headscriptToken-->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta charset="utf-8" /><!--
+    --><meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title ng-bind="(user.Company.Name) + ' Webstore'"></title>
 	<link rel="stylesheet" href="css/bootstrap-451.css" data-group="source" />
 	<link rel="stylesheet" href="css/editor.css" data-group="source" />
