--- a/app/index.html
+++ b/app/index.html
@@ -66,7 +66,7 @@
     <script src="ordercloud-specforms.js" data-group="resources"></script>
     <script src="productMatrix.js" data-group="resources"></script>
     <script src="AddToCartPreview.js" data-group="resources"></script>
-    <script src="tabsView.js" data-group="resources"</script>
+    <script src="tabsView.js" data-group="resources"></script>
     <!--Do NOT add a file override unless you do NOT see it in the list above - BB-->
     <!--Carousel is not built into this theme-->
 
