--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,7 @@
     <script src="productMatrix.js" data-group="resources"></script>
     <script src="AddToCartPreview.js" data-group="resources"></script>
     <script src="tabsView.js" data-group="resources"></script>
+    <script src="lib/oc/productLightbox.js" data-group="resources"></script>
     <!--Do NOT add a file override unless you do NOT see it in the list above - BB-->
     <!--Carousel is not built into this theme-->
 
